# fma_prep

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  Dataset.ipynb  README.md  executer.ipynb  executer.py  metadata.json  pyproject.toml
dataset/: dataset.py  dataset_tensorflow.py  dataset_torch.py  extract_music.py  labels.py
fma_prep/: __init__.py
fma_prep/dataset/: dataset.py  dataset_tensorflow.py  dataset_torch.py  extract_music.py  labels.py
fma_prep/preprocessing/: prep.py
notebooks/: 1 - Validate-Muscics.ipynb  2 - Preprocessing.ipynb
notebooks/exploit/: Exploring_Metadata.ipynb  Extract-features.ipynb  Get_features.ipynb
preprocessing/: clear.py  prep.py
