[tool.poetry]
name = "fma-prep"
version = "0.1.0"
description = ""
authors = ["sette <bruno.sette@ufscar.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
essentia = "^2.1b6.dev1110"
tqdm = "^4.66.2"
tensorflow = "^2.16.1"
scikit-learn = "^1.4.1.post1"
scikit-multilearn = "^0.2.0"
torch = "^2.3.0"
                                                                            

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.1.5"
ipywidgets = "^8.1.2"
jupyterlab-git = "^0.50.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
